[gd_scene load_steps=4 format=3 uid="uid://gsc5p8l0qaxia"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/generative_adversarial_networks_GANs/GenerativeAdversarialNetworksGANs.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="GenerativeAdversarialNetworksGANs" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="Generator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 4, 0)

[node name="GeneratorCore" type="CSGSphere3D" parent="Generator"]
radius = 1.0
material_override = SubResource("StandardMaterial3D_2")

[node name="GeneratorLabel" type="CSGBox3D" parent="Generator"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="GeneratorInput" type="Node3D" parent="Generator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="NoiseParticles" type="Node3D" parent="Generator/GeneratorInput"]

[node name="Discriminator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 4, 0)

[node name="DiscriminatorCore" type="CSGSphere3D" parent="Discriminator"]
radius = 1.0
material_override = SubResource("StandardMaterial3D_3")

[node name="DiscriminatorLabel" type="CSGBox3D" parent="Discriminator"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="DiscriminatorInput" type="Node3D" parent="Discriminator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="RealData" type="Node3D" parent="Discriminator/DiscriminatorInput"]

[node name="GeneratedData" type="Node3D" parent="Discriminator/DiscriminatorInput"]

[node name="Competition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CompetitionCore" type="CSGBox3D" parent="Competition"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_1")

[node name="CompetitionLabel" type="CSGBox3D" parent="Competition"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="DataFlow" type="Node3D" parent="."]

[node name="GeneratorToCompetition" type="Node3D" parent="DataFlow"]

[node name="CompetitionToDiscriminator" type="Node3D" parent="DataFlow"]

[node name="FeedbackLoop" type="Node3D" parent="."]

[node name="FeedbackParticles" type="Node3D" parent="FeedbackLoop"]

[node name="TrainingMetrics" type="Node3D" parent="."]

[node name="GeneratorLoss" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="GenLossBase" type="CSGBox3D" parent="TrainingMetrics/GeneratorLoss"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="GenLossIndicator" type="CSGSphere3D" parent="TrainingMetrics/GeneratorLoss"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="DiscriminatorLoss" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="DiscLossBase" type="CSGBox3D" parent="TrainingMetrics/DiscriminatorLoss"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="DiscLossIndicator" type="CSGSphere3D" parent="TrainingMetrics/DiscriminatorLoss"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
